// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home link matches snapshot 1`] = `
<a
  href="/"
  onClick={[Function]}
/>
`;

exports[`map link matches snapshot 1`] = `
<a
  href="/map"
  onClick={[Function]}
/>
`;
